<resources>
    <string name="app_name">ImageSearcherExam</string>
    <string name="please_wait">Please wait…</string>
    <string name="search_image">search image</string>
    <string name="view_results">view results</string>
    <string name="saved_results">saved results</string>
    <string name="search_results">search results</string>
    <string name="upload_from_gallery">Upload</string>
    <string name="choose_from_gallery">choose from gallery</string>
    <string name="this_might_take_a_minute">This might take a minute...</string>
    <string name="image_searcher">Image Searcher</string>
    <string name="searched_img">Searched img</string>
    <string name="result_1">Result #1</string>
    <string name="result_2">Result #2</string>
    <string name="result_3">Result #3</string>
    <string name="saved_image_search_results">Saved Results</string>
    <string name="save_results">Save results</string>
    <string name="about">about</string>
    <string name="image_searcher_app">Image searcher app</string>
    <string name="upload_your_image_and_see_the_three_most_similar_images_on_the_world_wide_web">Upload your image and see the three most similar images on the World Wide Web.</string>
    <string name="image_search_holder">image search holder</string>
    <string name="title">TITLE</string>
    <string name="full_screen_image_view">full screen image view</string>
    <string name="searched_image">searched image</string>
    <string name="result_one_image_view">result one image view</string>
    <string name="result_two_image_view">result two image view</string>
    <string name="result_three_image_view">result three image view</string>
</resources>