<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_for_app"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:id="@+id/searchBtn"
        android:layout_width="114dp"
        android:layout_height="88dp"
        android:layout_marginTop="276dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/roboto"
        android:text="@string/search_image"
        app:layout_constraintEnd_toStartOf="@+id/savedResultsBtn"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/buttonBorderColor"
        app:strokeWidth="1dp"
    />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:id="@+id/savedResultsBtn"
        android:layout_width="114dp"
        android:layout_height="88dp"
        android:layout_marginTop="276dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="@font/roboto"
        android:text="@string/saved_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@id/searchBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/buttonBorderColor"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/image_searcher"
        android:textColor="#FF5F1F"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="10dp"
        android:id="@+id/infoFab"
        android:backgroundTint="@color/buttonColor"
        app:strokeColor="@color/buttonBorderColor"
        app:strokeWidth="1dp"
        android:fontFamily="@font/roboto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>