<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:id="@+id/llMain"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:padding="3dp"




    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivSearched"
            android:background="@drawable/results_border"
            android:layout_width="88dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:layout_marginEnd="15dp"
            android:scaleType="centerInside"
            android:padding="3dp"/>
        <TextView
            android:id="@+id/tvSearched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/searched_img"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivResultOne"
            android:background="@drawable/results_border"
            android:layout_width="88dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:scaleType="centerInside"
            android:padding="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_1"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivResultTwo"
            android:background="@drawable/results_border"
            android:layout_width="88dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:scaleType="centerInside"
            android:padding="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/result_2"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivResultThree"
            android:background="@drawable/results_border"
            android:layout_width="88dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:scaleType="centerInside"
            android:padding="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_3"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>


</LinearLayout>