<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#ffe3c8"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


    <Button
        android:id="@+id/searchBtn"
        android:layout_width="114dp"
        android:layout_height="88dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#e06f1f"
        android:text="@string/search_image"
        android:textColor="#212121"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#9d5716"
        app:strokeWidth="4dp"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imgSearchHolder"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/border_image"
        android:cropToPadding="true"
        android:padding="1dp"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/saveResultsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBtn"
        app:layout_constraintVertical_bias="0.336" />

    <Button
        android:id="@+id/saveResultsBtn"
        android:layout_width="114dp"
        android:layout_height="88dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#e06f1f"
        android:text="@string/save_results"
        android:textColor="#212121"
        app:layout_constraintBottom_toTopOf="@+id/viewResultsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873"
        app:strokeColor="#9d5716"
        app:strokeWidth="4dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/viewResultsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_results"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>